syntax = "proto3";

package api;

option go_package = "/api";


service Lider{
    rpc ParticiparJuego (PeticionParticipar) returns (ConfirmacionParticipacion) {}
    rpc Jugar (Jugadas) returns (Estado) {}
    rpc Monto (PedirMonto) returns (MontoJugador) {}
}

message  PeticionParticipar {
    string participar = 1;
}

message  ConfirmacionParticipacion {
    string confirmacion = 1;
}

message  Jugadas {
    repeated int32 Jugadas = 1;
}

message  Estado {
    string estado =1;
}

message PedirMonto {
    string solicitud = 1;
}

message MontoJugador {
    int32 monto = 1;
}